--- a/_includes/menu.html
+++ b/_includes/menu.html
@@ -7,7 +7,7 @@
             <div class="container">
                 <!-- logo -->
                 <div class  ="header_logo_part with_border" role="banner">
-                    <a class="logo" href="{{ site.url }}"><img src="{{ site.url }}/assets/img/logo.png" width="200" height="200"/></a>
+                    <a class="logo" href="{{ site.url }}/index.html"><img src="{{ site.url }}/assets/img/logo.png" width="200" height="200"/></a>
 
                 </div>
                 <!-- / logo -->
@@ -20,7 +20,7 @@
                         <ul id="menu-main-menu" class="main-menu menu-bees">
                             <!-- menu item -->
                             <li class="menu-item current-menu-item page_item current_page_item current-menu-ancestor current-menu-parent current_page_parent current_page_ancestor menu-item-has-children bees-start">
-                                <a href="{{ site.url }}">
+                                <a href="{{ site.url }}/index.html">
                                     <div class="bees bees-start">
                                         <span></span>
                                         <div class="line-one"></div>
